Fix-1853 Implementing Font Color Selection on FrontEnd

--- a/frontend/app/templates/components/text-component/font-size.hbs
+++ b/frontend/app/templates/components/text-component/font-size.hbs
@@ -2,7 +2,7 @@
   <label>Customize Badge Layout</label>
 </div>
 <div class="ui stackable grid">
-  <div class="four column row">
+  <div class="five column row">
     <div class="center aligned column labels">Field</div>
     <div class="center aligned column labels">Font<br>
       <div class="ui checkbox">
@@ -16,12 +16,18 @@
         <label>Apply to all</label>
       </div>
     </div>
+     <div class="center aligned column">Font Color<br>
+      <div class="ui checkbox">
+        {{input name="fontcolall" type="checkbox" checked=fontcolall}}
+        <label>Apply to all</label>
+      </div>
+    </div>
     <div class="center aligned column">Adjust long content to width automatically</div>
   </div>
 
-  <div class="four column row">
+  <div class="five column row">
     <div class="center aligned column labels">First Name</div>
-    <div class="center aligned column font_type">
+    <div class="center aligned column    ">
       <div class="one wide column">
         {{#ui-dropdown class="selection" selected="Bob"  onChange=(action (mut fonttype1))}}
           <div class="default text">Helvetica</div>
@@ -40,7 +46,7 @@
       </div>
     </div>
     <div class="center aligned column">
-      <div class="one wide column">
+      <div class="one wide cloumn">
         {{#ui-dropdown class="selection" onChange=(action (mut font1))}}
         <div class="default text">10</div>
         <i class="dropdown icon"></i>
@@ -58,7 +64,12 @@
         {{/ui-dropdown}}
       </div>
     </div>
-    <div class="center aligned column">
+    <div class="center aligned column ">
+      <div class="one wide column">
+        {{col-pick-input value=fontcol1 onChange=(action (mut fontcol1)) }}
+      </div>
+    </div>
+    <div class="center aligned column ">
       <div class="ui toggle checkbox">
         <input name="public" type="checkbox" checked="checked">
         <label></label>
@@ -66,9 +77,9 @@
     </div>
   </div>
 
-  <div class="four column row">
+  <div class="five column row">
     <div class="center aligned column labels">Last Name</div>
-    <div class="center aligned column font_type">
+    <div class="center aligned column  ">
       <div class="one wide column">
         {{#ui-dropdown class="selection" selected="Bob" onChange=(action (mut fonttype2))}}
           <div class="default text">Helvetica</div>
@@ -105,6 +116,11 @@
         {{/ui-dropdown}}
       </div>
     </div>
+    <div class="center aligned column ">
+      <div class="one wide column">
+        {{col-pick-input value=fontcol2 onChange=(action (mut fontcol2)) }}
+      </div>
+    </div>
     <div class="center aligned column">
       <div class="ui toggle checkbox">
         <input name="public" type="checkbox" checked="checked">
@@ -113,9 +129,9 @@
     </div>
   </div>
 
-  <div class="four column row">
+  <div class="five column row">
     <div class="center aligned column labels">Designation</div>
-    <div class="center aligned column font_type">
+    <div class="center aligned column  ">
       <div class="one wide column">
         {{#ui-dropdown class="selection" selected="Bob" onChange=(action (mut fonttype3))}}
           <div class="default text">Helvetica</div>
@@ -152,6 +168,11 @@
         {{/ui-dropdown}}
       </div>
     </div>
+    <div class="center aligned column ">
+      <div class="one wide column">
+        {{col-pick-input value=fontcol3 onChange=(action (mut fontcol3)) }}
+      </div>
+    </div>
     <div class="center aligned column">
       <div class="ui toggle checkbox">
         <input name="public" type="checkbox" checked="checked">
@@ -160,9 +181,9 @@
     </div>
   </div>
 
-  <div class="four column row">
+  <div class="five column row">
     <div class="center aligned column labels">Organization</div>
-    <div class="center aligned column font_type">
+    <div class="center aligned column  ">
       <div class="one wide column">
         {{#ui-dropdown class="selection" selected="Bob" onChange=(action (mut fonttype4))}}
           <div class="default text">Helvetica</div>
@@ -199,6 +220,11 @@
         {{/ui-dropdown}}
       </div>
     </div>
+    <div class="center aligned column ">
+      <div class="one wide column">
+        {{col-pick-input value=fontcol4 onChange=(action (mut fontcol4)) }}
+      </div>
+    </div>
     <div class="center aligned column">
       <div class="ui toggle checkbox">
         <input name="public" type="checkbox" checked="checked">
@@ -207,9 +233,9 @@
     </div>
   </div>
 
-  <div class="four column row">
+  <div class="five column row">
     <div class="center aligned column  labels">Handle (e.g. Github)</div>
-    <div class="center aligned column font_type">
+    <div class="center aligned column  ">
       <div class="one wide column">
         {{#ui-dropdown class="selection" selected="Bob" onChange=(action (mut fonttype5))}}
           <div class="default text">Helvetica</div>
@@ -244,6 +270,11 @@
           <div class="item" data-item="15">15</div>
         </div>
         {{/ui-dropdown}}
+      </div>
+    </div>
+    <div class="center aligned column ">
+      <div class="one wide column">
+        {{col-pick-input value=fontcol5 onChange=(action (mut fontcol5)) }}
       </div>
     </div>
     <div class="center aligned column">
