--- a/frontend/app/templates/components/user-component/preview.hbs
+++ b/frontend/app/templates/components/user-component/preview.hbs
@@ -1,6 +1,6 @@
 <div class="ui basic segment">
     <div class="bgImg ui raised segment"
-        style="color: #{{defColor}};
+        style="
         background-size: cover;
         background-repeat: no-repeat;
         height: {{if previewHeight '475' '600'}}px;
@@ -10,31 +10,36 @@
             <p
             style="
             font-size : {{rel font_fn}}px;
-            font-family : {{defFont}};">
+            font-family : {{defFont}};
+            color: #{{fontcol_fn}}">
             {{fn}}
             </p>
             <p
             style="
             font-size : {{rel font_ln}}px;
-            font-family : {{defFont}};">
+            font-family : {{defFont}};
+            color: #{{fontcol_ln}}">
             {{ln}}
             </p>
             <p
             style="
             font-size : {{rel font_desg}}px;
-            font-family : {{defFont}};">
+            font-family : {{defFont}};
+            color: #{{fontcol_desg}}">
             {{desg}}
             </p>
             <p
             style="
             font-size : {{rel font_org}}px;
-            font-family : {{defFont}};">
+            font-family : {{defFont}};
+            color: #{{fontcol_org}}">
             {{org}}
             </p>
             <p
             style="
             font-size : {{rel font_sh}}px;
-            font-family : {{defFont}};">
+            font-family : {{defFont}};
+            color: #{{fontcol_sh}}">
             {{sh}}
             </p>
         </div>
