--- a/frontend/app/styles/partials/create-badge.scss
+++ b/frontend/app/styles/partials/create-badge.scss
@@ -1,12 +1,12 @@
 .ui{
   .column{
     color: black;
-    
+
     .create-badge {
       position: relative;
       padding-left: 6%;
       padding-right: 6%;
-      top: -35px;
+      top: 14px;
     }
   }
 }
@@ -35,24 +35,10 @@
   display: none !important;
 }
 
-.font_type{
-  margin: 0 30px 0 -35px;
-}
+
 
 .labels{
-  margin: 0 10px 0 -10px; 
-}
-.ui{
-  .column{
-    color: black;
-    
-    .create-badge {
-      position: relative;
-      padding-left: 6%;
-      padding-right: 6%;
-      top: -35px;
-    }
-  }
+  margin: 0 10px 0 -10px;
 }
 
 .guide {
@@ -74,14 +60,16 @@
 .hide {
   display: none !important;
 }
-
-.font_type{
-  margin: 0 30px 0 -35px;
+.selection {
+  min-width:3em !important;
 }
+
+
 
 .labels{
   margin: 0 10px 0 -10px; 
 }
+
 .switch {
   position: relative;
   display: inline-block;
