--- a/frontend/app/templates/create-badges.hbs
+++ b/frontend/app/templates/create-badges.hbs
@@ -1,7 +1,7 @@
 <div class="ui stackable grid">
     <div class="right floated right aligned two wide column">
         <label class="switch" {{action 'togglePreview'}} data-tooltip="Toggle Preview" data-position="left center">
-            <input type="checkbox" class="checkswitch" checked>
+            <input type="checkbox" class="checkswitch" >
             <span class="slider round"></span>
         </label>
     </div>
