--- a/frontend/app/templates/components/user-component/my-badges.hbs
+++ b/frontend/app/templates/components/user-component/my-badges.hbs
@@ -48,6 +48,9 @@
               {{#ui-popup content='Delete' class='ui icon button' click=(action 'deleteBadge' badge)}}
               <i class="trash alternate outline icon"></i>
               {{/ui-popup}}
+              {{#ui-popup content='Share on Facebook' class='ui icon button' click=(action 'shareBadge' badge)}}
+              <i class="facebook icon"></i>
+              {{/ui-popup}}
             </div>
           </div>
         </div>
