--- a/frontend/app/styles/partials/my-badges.scss
+++ b/frontend/app/styles/partials/my-badges.scss
@@ -1,4 +1,3 @@
-
 .ui.segment {
   margin: 1%;
 
@@ -20,16 +19,20 @@
   margin-left: 4%;
 }
 
-.pencil {
-  width: 180px;
-}
-.checkbox { 
-  position: absolute; 
-  top: 0px; 
+.checkbox {
+  position: absolute;
+  top: 0px;
   right: 0px;
 }
 
 .image {
-   position: relative;  
-  }
+  position: relative;
+}
 
+.downloadBadge {
+  margin-top: -13px !important;
+}
+
+.downloadCheck {
+  margin-top: 7px !important;
+}
