Add logo section both fronted and backed

--- a/frontend/app/templates/components/background-component/image-component.hbs
+++ b/frontend/app/templates/components/background-component/image-component.hbs
@@ -1,3 +1,3 @@
 <div class="field">
-    {{forms/image-upload imageData=imageData needsCropper=true id='badge_back' icon='camera' hint='Select User Image' maxSizeInKb=1000}}
+    {{forms/image-upload imageData=imageData needsCropper=true id='badge_back' icon='camera' hint='Select User Image' maxSizeInKb=1000 height=280 width=248}}
 </div>
