--- a/frontend/app/templates/components/user-component/my-badges.hbs
+++ b/frontend/app/templates/components/user-component/my-badges.hbs
@@ -49,7 +49,7 @@
               <div class="ui dropdown">
                 <i class="share alternate icon"></i>
                 <div class="menu">
-                  <div class="item"><a href="https://www.facebook.com/dialog/feed?app_id=1389892087910588&caption={{badge.badge_name}}&link={{badge.download_link}}&picture{{badge.image_link}}/200/200" target="_blank"><i
+                  <div class="item"><a href="https://www.facebook.com/dialog/feed?app_id=1389892087910588&quote=Hey ! I have created Badges for My Event. You can create yours using Badgeyay.com&caption={{badge.badge_name}}&link={{badge.download_link}}&picture{{badge.image_link}}/200/200" target="_blank"><i
                         class="facebook icon"></i>Share to Facebook</a></div>
                   <div class="item"><a href="https://twitter.com/home?status=Hi!%20See%20my%20new%20badge%20on%20Badgeyay%20here%20-%20%20%0A{{badge.download_link}}"
                       target="_blank"><i class="twitter icon"></i>Share to Twitter</a></div>
