--- a/frontend/app/templates/components/badge-design.hbs
+++ b/frontend/app/templates/components/badge-design.hbs
@@ -1,17 +1,9 @@
-{{!--
-<div class="ui grid">
-  <div class="six wide column">
-  </div>
-  <div class="six wide column">
-    <h3>Features</h3>
-  </div>
-</div> --}}
 <div class="wrapper">
         <p class="heading-alpha">Features</p>
   <div class="ui stackable two column grid container center aligned">
     <div class="column">
       <div class="carousel-body">
-        <img class="ui large image" src="https://raw.githubusercontent.com/rajvaibhavdubey/rajvaibhavdubey.github.io/master/badge_design_red.png">
+        <img class="ui  image" src="images/badge.png">
       </div>
     </div>
     <div class="column features-list" >
