Fixing Overlapping Color picker

--- a/frontend/app/templates/components/text-component/font-size.hbs
+++ b/frontend/app/templates/components/text-component/font-size.hbs
@@ -10,15 +10,15 @@
         <label>Apply to all</label>
       </div>
     </div>
-    <div class="center aligned column">Font Size (in pixels)<br>
+    <div class="center aligned column">Font Color<br>
       <div class="ui checkbox">
-        {{input name="fontsizeall" type="checkbox" checked=fontsizeall}}
+        {{input name="fontcolall" type="checkbox" checked=fontcolall}}
         <label>Apply to all</label>
       </div>
     </div>
-     <div class="center aligned column">Font Color<br>
+    <div class="center aligned column">Font Size<br>
       <div class="ui checkbox">
-        {{input name="fontcolall" type="checkbox" checked=fontcolall}}
+        {{input name="fontsizeall" type="checkbox" checked=fontsizeall}}
         <label>Apply to all</label>
       </div>
     </div>
@@ -45,6 +45,11 @@
         {{/ui-dropdown}}
       </div>
     </div>
+     <div class="center aligned column ">
+      <div class="one wide column">
+        {{col-pick-input value=fontcol1 onChange=(action (mut fontcol1)) }}
+      </div>
+    </div>
     <div class="center aligned column">
       <div class="one wide cloumn">
         {{#ui-dropdown class="selection" onChange=(action (mut font1))}}
@@ -64,11 +69,7 @@
         {{/ui-dropdown}}
       </div>
     </div>
-    <div class="center aligned column ">
-      <div class="one wide column">
-        {{col-pick-input value=fontcol1 onChange=(action (mut fontcol1)) }}
-      </div>
-    </div>
+   
     <div class="center aligned column ">
       <div class="ui toggle checkbox">
         <input name="public" type="checkbox" checked="checked">
@@ -76,7 +77,6 @@
       </div>
     </div>
   </div>
-
   <div class="five column row">
     <div class="center aligned column labels">Last Name</div>
     <div class="center aligned column  ">
@@ -97,6 +97,11 @@
         {{/ui-dropdown}}
       </div>
     </div>
+    <div class="center aligned column ">
+      <div class="one wide column">
+        {{col-pick-input value=fontcol2 onChange=(action (mut fontcol2)) }}
+      </div>
+    </div>
     <div class="center aligned column">
       <div class="one wide cloumn">
         {{#ui-dropdown class="selection" onChange=(action (mut font2))}}
@@ -114,11 +119,6 @@
           <div class="item" data-item="15">15</div>
         </div>
         {{/ui-dropdown}}
-      </div>
-    </div>
-    <div class="center aligned column ">
-      <div class="one wide column">
-        {{col-pick-input value=fontcol2 onChange=(action (mut fontcol2)) }}
       </div>
     </div>
     <div class="center aligned column">
@@ -149,6 +149,11 @@
         {{/ui-dropdown}}
       </div>
     </div>
+    <div class="center aligned column ">
+      <div class="one wide column">
+        {{col-pick-input value=fontcol3 onChange=(action (mut fontcol3)) }}
+      </div>
+    </div>
     <div class="center aligned column">
       <div class="one wide cloumn">
         {{#ui-dropdown class="selection" onChange=(action (mut font3))}}
@@ -168,11 +173,7 @@
         {{/ui-dropdown}}
       </div>
     </div>
-    <div class="center aligned column ">
-      <div class="one wide column">
-        {{col-pick-input value=fontcol3 onChange=(action (mut fontcol3)) }}
-      </div>
-    </div>
+    
     <div class="center aligned column">
       <div class="ui toggle checkbox">
         <input name="public" type="checkbox" checked="checked">
@@ -201,6 +202,11 @@
         {{/ui-dropdown}}
       </div>
     </div>
+     <div class="center aligned column ">
+      <div class="one wide column">
+        {{col-pick-input value=fontcol4 onChange=(action (mut fontcol4)) }}
+      </div>
+    </div>
     <div class="center aligned column">
       <div class="one wide cloumn">
         {{#ui-dropdown class="selection" onChange=(action (mut font4))}}
@@ -218,11 +224,6 @@
           <div class="item" data-item="15">15</div>
         </div>
         {{/ui-dropdown}}
-      </div>
-    </div>
-    <div class="center aligned column ">
-      <div class="one wide column">
-        {{col-pick-input value=fontcol4 onChange=(action (mut fontcol4)) }}
       </div>
     </div>
     <div class="center aligned column">
@@ -253,6 +254,11 @@
         {{/ui-dropdown}}
       </div>
     </div>
+    <div class="center aligned column ">
+      <div class="one wide column">
+        {{col-pick-input value=fontcol5 onChange=(action (mut fontcol5)) }}
+      </div>
+    </div>
     <div class="center aligned column">
       <div class="one wide cloumn">
         {{#ui-dropdown class="selection" onChange=(action (mut font5))}}
@@ -270,11 +276,6 @@
           <div class="item" data-item="15">15</div>
         </div>
         {{/ui-dropdown}}
-      </div>
-    </div>
-    <div class="center aligned column ">
-      <div class="one wide column">
-        {{col-pick-input value=fontcol5 onChange=(action (mut fontcol5)) }}
       </div>
     </div>
     <div class="center aligned column">
