Adds the about us section.
The about us section has been added.

Fixes #1865

--- a/frontend/app/templates/components/footer-main.hbs
+++ b/frontend/app/templates/components/footer-main.hbs
@@ -7,6 +7,9 @@
             {{#link-to 'faq' class='item'}}
                 {{init-cap 'faq'}}
             {{/link-to}}
+            {{#link-to 'about' class='item'}}
+                {{init-cap 'About Us'}}
+            {{/link-to}}
         </div>
         <div class="right menu">
             <strong class="item">Follow us on</strong>
