--- a/frontend/app/templates/components/user-component/preview.hbs
+++ b/frontend/app/templates/components/user-component/preview.hbs
@@ -26,7 +26,7 @@
                 <p
                 style="
                 font-size : {{rel font_fn}}px;
-                font-family : {{defFont}};>
+                font-family : {{defFont}};
                 color: #{{fontcol_fn}}">
                 {{fn}}
                 </p>
