--- a/frontend/app/templates/components/nav-bar.hbs
+++ b/frontend/app/templates/components/nav-bar.hbs
@@ -36,7 +36,7 @@
                 CREATE BADGES
             {{/link-to}}
         {{else}}
-            {{#link-to 'login' class='item ui orange text create'}}
+            {{#link-to 'login' class='item ui orange text create' click=(action 'loginToContinue')}}
                 CREATE BADGES
             {{/link-to}}
         {{/if}}
