Issue 2025 Add docstrings for Response class and its various functions.

--- a/frontend/app/styles/partials/preview.scss
+++ b/frontend/app/styles/partials/preview.scss
@@ -10,6 +10,8 @@
 
 // scss-lint:disable all
 .preview {
-  top : -1% !important;
+  top: -1% !important;
+  z-index: 1;
 }
+
 // scss-lint:enable all
