--- a/frontend/app/styles/partials/footer-main.scss
+++ b/frontend/app/styles/partials/footer-main.scss
@@ -1,7 +1,6 @@
-$bkColor: #1b1c1d;
-
 footer {
-  background-color: $bkColor;
+  background-color: #1b1c1d;
+  z-index: -1;
 }
 
 @media only screen and (max-width: 600px) {
