--- a/frontend/app/templates/components/badge-design.hbs
+++ b/frontend/app/templates/components/badge-design.hbs
@@ -1,20 +1,21 @@
 <div class="wrapper">
-        <p class="heading-alpha">Features</p>
+  <p class="heading-alpha">Features</p>
   <div class="ui stackable two column grid container center aligned">
     <div class="column">
       <div class="carousel-body">
         <img class="ui  image" src="images/badge.png">
       </div>
     </div>
-    <div class="column features-list" >
+    <div class="column features-list">
       <div class="border-left"></div>
       <div class="ui left aligned bulleted list features-list">
         <h3 class="item">Many badge backgrounds to choose from</h3>
         <h3 class="item">Different types of available badge sizes</h3>
         <h3 class="item">Custom font colours</h3>
+        <h3 class="item">Custom Logos for the badge</h3>
         <h3 class="item">Custom background sources</h3>
         <h3 class="item">Different paper sizes</h3>
       </div>
     </div>
   </div>
-  </div>
+</div>
