--- a/frontend/app/templates/components/footer-main.hbs
+++ b/frontend/app/templates/components/footer-main.hbs
@@ -10,6 +10,9 @@
             {{#link-to 'about' class='item'}}
             {{init-cap 'About Us'}}
             {{/link-to}}
+             {{#link-to 'contact-badgeyay' class='item'}}
+                {{init-cap 'contact'}}
+            {{/link-to}}
         </div>
         <div class="right menu">
             <strong class="item">Follow us on</strong>
@@ -37,6 +40,10 @@
                     {{#link-to 'faq' class='item'}}
                     {{init-cap 'faq'}}
                     {{/link-to}}
+                    {{#link-to 'contact-badgeyay' class='item'}}
+                    {{init-cap 'contact'}}
+                    {{/link-to}}
+                    
                 </div>
             </div>
             <div class="seven wide column ">
@@ -47,11 +54,11 @@
                     <div class="six wide column">
 
                         <div class="ui inverted link list">
-                            <a class="item" href="https://fossasia.org/">Fossasia</a>
-                            <a class="item" href="https://loklak.org/">Loklak</a>
-                            <a class="item" href="https://chat.susi.ai/">SUSI</a>
-                            <a class="item" href="https://eventyay.com/">Eventyay</a>
-                            <a class="item" href="https://github.com/fossasia/neurolab-android">Neurolab</a>
+                            <a class="item" href="https://fossasia.org/" target="_blank" rel="noopener">Fossasia</a>
+                            <a class="item" href="https://loklak.org/" target="_blank" rel="noopener">Loklak</a>
+                            <a class="item" href="https://chat.susi.ai/" target="_blank" rel="noopener">SUSI</a>
+                            <a class="item" href="https://eventyay.com/" target="_blank" rel="noopener">Eventyay</a>
+                            <a class="item" href="https://github.com/fossasia/neurolab-android" target="_blank" rel="noopener">Neurolab</a>
                         </div>
                     </div>
                     <div class="one wide column">
@@ -59,10 +66,10 @@
                     </div>
                     <div class="six wide column">
                         <div class="ui inverted link list">
-                            <a class="item" href="https://pslab.io/">PSlab</a>
-                            <a class="item" href="https://meilix.org/">Meilix</a>
-                            <a class="item" href="https://phimp.me/">Phimp.me</a>
-                            <a class="item" href="http://dev.yaydoc.org/">Yaydoc</a>
+                            <a class="item" href="https://pslab.io/" target="_blank" rel="noopener">PSlab</a>
+                            <a class="item" href="https://meilix.org/" target="_blank" rel="noopener">Meilix</a>
+                            <a class="item" href="https://phimp.me/" target="_blank" rel="noopener">Phimp.me</a>
+                            <a class="item" href="http://dev.yaydoc.org/" target="_blank" rel="noopener">Yaydoc</a>
                         </div>
                     </div>
                 </div>
@@ -73,7 +80,7 @@
                 </h4>
                 <div class="ui inverted link list">
                      {{#each socialMedia as |media|}}
-                    <a class="item" href={{media.link}} target="_blank">
+                    <a class="item" href={{media.link}} target="_blank" rel="noopener">
                         <i class="{{media.id}} icon"></i>{{ first-cap media.id}}
                     </a>
                     {{/each}}
