--- a/frontend/app/templates/components/overlay-welcome.hbs
+++ b/frontend/app/templates/components/overlay-welcome.hbs
@@ -24,6 +24,9 @@
                         Select from one of the Input Source
                     </li>
                     <li>
+                        Select from the logo inputs 
+                    </li>
+                    <li>
                         Select Badge Size
                     </li>
                     <li>
