Adds the about us section. (#1868)
The about us section has been added.

Fixes #1865

--- a/frontend/app/templates/components/footer-main.hbs
+++ b/frontend/app/templates/components/footer-main.hbs
@@ -10,6 +10,9 @@
             {{#link-to 'about' class='item'}}
             {{init-cap 'About Us'}}
             {{/link-to}}
+            {{#link-to 'about' class='item'}}
+                {{init-cap 'About Us'}}
+            {{/link-to}}
         </div>
         <div class="right menu">
             <strong class="item">Follow us on</strong>
