Added Contact Section with Dynamic URl's (#1888)

--- a/frontend/app/templates/components/footer-main.hbs
+++ b/frontend/app/templates/components/footer-main.hbs
@@ -10,8 +10,8 @@
             {{#link-to 'about' class='item'}}
             {{init-cap 'About Us'}}
             {{/link-to}}
-            {{#link-to 'about' class='item'}}
-                {{init-cap 'About Us'}}
+             {{#link-to 'contact-badgeyay' class='item'}}
+                {{init-cap 'contact'}}
             {{/link-to}}
         </div>
         <div class="right menu">
