Contact Us added in footer

--- a/frontend/app/templates/components/footer-main.hbs
+++ b/frontend/app/templates/components/footer-main.hbs
@@ -40,6 +40,10 @@
                     {{#link-to 'faq' class='item'}}
                     {{init-cap 'faq'}}
                     {{/link-to}}
+                    {{#link-to 'contact-badgeyay' class='item'}}
+                    {{init-cap 'contact'}}
+                    {{/link-to}}
+                    
                 </div>
             </div>
             <div class="seven wide column ">
