Fixed the data tooltip overlapping

--- a/frontend/app/templates/create-badges.hbs
+++ b/frontend/app/templates/create-badges.hbs
@@ -1,3 +1,4 @@
+<h1>Badge Generator</h1>
 <div class="ui stackable grid">
     <div class="right floated right aligned two wide column">
         <label class="switch" {{action 'togglePreview'}} data-tooltip="Toggle Preview" data-position="left center">
@@ -36,7 +37,7 @@
                 <div class="ui form width-container">
                     <p>
                         <b>Select from one of the Input Sources</b>
-                        <a class="ui right floated icon orange basic button" href="{{href-to 'user-guide'}}" target="_blank" data-tooltip="User Input Guide"
+                        <a class="ui right floated icon orange basic button tooltip" href="{{href-to 'user-guide'}}" target="_blank" data-tooltip="User Input Guide"
                             data-position="right center">
                             <i class="info icon"></i>
                         </a>
@@ -77,7 +78,7 @@
                     </div>
                     <div class="ui column form ">
 
-                        <div class="ui right floated icon orange basic button" data-tooltip="Badge size is in inches, 1 inch = 2.54 cm, 1 inch = 25.4 mm"
+                        <div class="ui right floated icon orange basic button tooltip" data-tooltip="Badge size is in inches, 1 inch = 2.54 cm, 1 inch = 25.4 mm"
                             data-position="right center">
                             <i class="info icon"></i>
                         </div>
@@ -98,7 +99,7 @@
                 <div class="ui form width-container">
                     <p>
                         <b>Select from one of the Logo sources</b>
-                        <a class="ui right floated icon orange basic button" data-tooltip="Best Suitable Image -> Size(width x height): 749 X 211px & Resolution: 300 DPI"
+                        <a class="ui right floated icon orange basic button tooltip" data-tooltip="Best Suitable Image -> Size(width x height): 749 X 211px & Resolution: 300 DPI"
                             data-position="right center">
                             <i class="info icon"></i>
                         </a>
@@ -139,7 +140,7 @@
                 <div class="ui form width-container">
                     <p>
                         <b>Select from one of the background sources</b>
-                        <a class="ui right floated icon orange basic button" data-tooltip="Best Suitable Image -> Size(width x height): 749 X 1049px & Resolution: 300 DPI"
+                        <a class="ui right floated icon orange basic button tooltip" data-tooltip="Best Suitable Image -> Size(width x height): 749 X 1049px & Resolution: 300 DPI"
                             data-position="right center">
                             <i class="info icon"></i>
                         </a>
