User Email Check on Signup

--- a/frontend/app/styles/partials/signup.scss
+++ b/frontend/app/styles/partials/signup.scss
@@ -8,6 +8,10 @@ $colorwhite: #ffffff;
   top: 40px;
 }
 
+#emailstatus {
+  text-align: center;
+}
+
 .form {
   .ending-border {
     border-bottom: 0.01rem dotted;
