--- a/frontend/app/templates/signup.hbs
+++ b/frontend/app/templates/signup.hbs
@@ -1,5 +1,5 @@
 <div class="ui one column container stackable doubling centered grid">
   <div class="column">
-    {{forms/signup-form signUp=(action 'signUp')}}
+    {{forms/signup-form signUp=(action 'signUp')  emailcheck=(action 'emailcheck')}}
   </div>
 </div>
